# alphalens

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: backend.yml  ci.yml  frontend.yml
backend/: .env.example  main.py  pyproject.toml
backend/adapters/: __init__.py  cache.py  cognito_auth.py  fmp_fundamentals.py  http_client.py  mock_auth.py  mock_fundamentals.py  mock_market_data.py  mock_news.py  mock_sentiment.py  newsapi_news.py  polygon_market_data.py  yfinance_fundamentals.py
backend/domain/: __init__.py  auth.py  providers.py  recommendation.py  run_repository.py  settings.py
backend/repo/: __init__.py  recommendations.py
backend/routers/: auth.py  deps.py  recommendations.py
backend/services/: __init__.py  indicators.py  recommendation.py  scoring.py
backend/tests/: test_app.py  test_auth.py  test_cache.py  test_fmp_provider.py  test_health.py  test_indicators.py  test_newsapi_provider.py  test_polygon_provider.py  test_recommendation_service.py  test_recommendations_api.py  test_run_repository.py  test_scoring.py  test_yfinance_provider.py
config/: auth.yaml
docs/: feature.index.md  openapi.yaml  phase.index.md  prd.base.md  prd.phase-1.md
docs/devout/: F1-1.out  F1-2.out  F1-9.out
docs/infra/: infra-index.md
docs/prompts/: F1-1.md  F1-10.md  F1-9.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
infra/: app.ts  cdk.json  package-lock.json  package.json  tsconfig.json
scripts/: hydrate-config.sh
(+42 files in other folders)
